Fixed some spacing issues

--- a/controller/src/static/css/base.css
+++ b/controller/src/static/css/base.css
@@ -54,7 +54,6 @@
   text-align: center;
   margin-top: -500px;
   padding-top: -100px;
-  margin-right: 100px;
   position: relative;
   z-index: 10;
 }
@@ -67,6 +66,15 @@
 
 #averageClickTime, #averageReportTime {
   text-align: center;
+  font-size: 30px;
+  margin-top: 10%;
+  transform: translate(0%, 125%);
+  color: #174A91
+}
+
+.circles {
+  text-align: center;
+  transform: translate(0%, -35%);
 }
 
 #campaignProgressText {
@@ -84,13 +92,14 @@
 
 #piechart {
   margin-top: 100px;
-  margin-left: 30%;
-  margin-bottom: 50px; 
+  margin-left: 20%;
+  margin-bottom: 50px;
 }
 
 #piechartTwo {
   margin-top: 100px;
   margin-bottom: 50px;
+  margin-left: 6vw;
 }
 
 #columnchart {
@@ -113,6 +122,7 @@
   z-index: 1;
   text-align: left;
   width: 15%;
+  margin-left: 0.5%;
 }
 
 #cisaContact {
@@ -122,6 +132,7 @@
   z-index: 1;
   text-align: left;
   width: 15%;
+  margin-left: 0.5%;
 }
 
 #numbersTitle {
@@ -130,6 +141,7 @@
   z-index: 1;
   text-align: left;
   width: 15%;
+  margin-left: 0.5%;
 }
 
 #campaignNumbers {
@@ -138,5 +150,7 @@
   z-index: 1;
   text-align: left;
   width: 12%;
-  border: 1px solid #FDC010
+  border: 1px solid #FDC010;
+  margin-left: 0.5%;
+  padding-left: 0.2%;
 }
